Gtk+-3.20 BlueMenta: fix jumping image-button.radio

--- a/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-borders.css
+++ b/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-borders.css
@@ -445,9 +445,50 @@ button.destructive-action:active,
 .destructive-action.button,
 .destructive-action.button:checked,
 .destructive-action.button:active {
-	border-image: url("borders/button-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
-	border-radius: 3px;
-	border-width: 2px;
-	border-style: solid;
-	border-color: transparent;
+    border-image: url("borders/button-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
+    border-radius: 3px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: transparent;
 }
+
+button.image-button.radio:dir(ltr) {
+    border-image: url("borders/button.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
+    border-radius: 4px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+    border-radius: 3px;
+}
+
+button.image-button.radio.default:dir(ltr),
+button.image-button.radio:dir(ltr):focus {
+    border-image: url("borders/button-focus.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
+    border-radius: 4px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+}
+
+button.image-button.radio:dir(ltr):checked {
+    border-image: url("borders/button-active.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
+    border-radius: 4px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+}
+
+button.image-button.radio:dir(ltr):hover,
+button.image-button.radio:dir(ltr):checked:focus,
+button.image-button.radio:dir(ltr):checked:hover,
+button.image-button.radio:dir(ltr):checked:focus:hover,
+button.image-button.radio:dir(ltr):focus:hover:active,
+button.image-button.radio:dir(ltr):checked:focus:hover:active,
+button.image-button.radio.default:dir(ltr):checked {
+    border-image: url("borders/button-active-focus.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
+    border-radius: 4px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+}
+
